Team Sprites printed on AppPokemonWindow